--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -49,30 +49,11 @@
             android:id="@+id/oss_license"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="oss license"
+            android:text="@string/licenses"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
-
-        <Button
-            android:id="@+id/test_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintLeft_toRightOf="@+id/oss_license"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-        <android.support.constraint.Group
-            android:id="@+id/group_app_information"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:constraint_referenced_ids="version_name,app_icon,app_name"
-            />
-
 
     </android.support.constraint.ConstraintLayout>
 </layout>
