--- a/app/src/main/res/layout/fragment_filter_list.xml
+++ b/app/src/main/res/layout/fragment_filter_list.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <android.support.design.widget.CoordinatorLayout
@@ -18,10 +19,12 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scrollbars="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/item_filtered_feed_info"
                 />
 
             <ImageView
