--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -84,6 +84,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/favorite_button"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/summary"
+                android:layout_marginBottom="16dp"
                 />
 
             <ImageButton
@@ -98,6 +99,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="1.0"
                 tools:srcCompat="@drawable/ic_favorite"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 />
 
             <ImageButton
@@ -111,6 +114,8 @@
                 app:layout_constraintLeft_toRightOf="@+id/favorite_button"
                 app:layout_constraintRight_toLeftOf="@+id/add_filter_button"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 />
 
             <ImageButton
@@ -123,17 +128,20 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/archive_button"
                 app:layout_constraintRight_toLeftOf="@+id/comment_button"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 />
 
             <jp.gcreate.product.filteredhatebu.ui.feeddetail.CommentStatusView
                 android:id="@+id/comment_button"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintLeft_toRightOf="@+id/add_filter_button"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/favorite_button"
-                app:layout_constraintTop_toTopOf="@+id/favorite_button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 tools:layout="@layout/view_comment_status"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 />
 
         </android.support.constraint.ConstraintLayout>
