--- a/app/src/main/res/layout/view_comment_status.xml
+++ b/app/src/main/res/layout/view_comment_status.xml
@@ -14,19 +14,20 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackground"
         >
 
-        <ImageView
+        <ImageButton
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_comment"
             android:tint="@color/colorAccent"
+            style="@style/Base.Widget.AppCompat.ActionButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/status_message"
@@ -39,9 +40,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/icon"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/icon"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/icon"
             android:layout_marginStart="8dp"
             tools:text="29"
             />
