--- a/app/src/main/res/layout/fragment_feed_detail.xml
+++ b/app/src/main/res/layout/fragment_feed_detail.xml
@@ -64,6 +64,8 @@
                 android:id="@+id/summary"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:layout_constraintHeight_default="wrap"
+                app:layout_constraintHeight_max="0dp"
                 android:padding="16dp"
                 android:text="@{item.summary}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
