--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -6,14 +6,15 @@
           />
 
     <item
+        android:id="@+id/navigation_favorite"
+        android:title="@string/bottom_navigation_favorite"
+        android:icon="@drawable/ic_favorite"
+        />
+
+    <item
         android:id="@+id/navigation_filter"
         android:title="@string/bottom_navigation_filter"
         android:icon="@drawable/ic_filter"
-          />
-
-    <item android:id="@+id/navigation_favorite"
-          android:title="@string/bottom_navigation_favorite"
-          android:icon="@drawable/ic_favorite"
           />
 
     <item android:id="@+id/navigation_settings"
