--- a/app/src/main/res/layout/item_feed_list_item.xml
+++ b/app/src/main/res/layout/item_feed_list_item.xml
@@ -21,7 +21,8 @@
         android:padding="8dp"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackground"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@{item.archived ? @color/colorPrimaryLight : @android:color/transparent}"
         >
 
         <TextView
