--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorPrimaryLight">@color/indigo_100</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="item_background_archive">@color/grey_400</color>
+    <color name="item_background_new">@android:color/transparent</color>
 </resources>
