--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,7 +37,7 @@
         >
         <argument
             android:name="feedUrl"
-            app:type="string"
+            app:argType="string"
             />
     </fragment>
     <fragment
@@ -47,11 +47,11 @@
         >
         <argument
             android:name="filter"
-            app:type="string"
+            app:argType="string"
             />
         <argument
             android:name="feedCount"
-            app:type="integer"
+            app:argType="integer"
             />
         <action
             android:id="@+id/action_filter_detail_to_feed_detail"
