--- a/app/src/main/res/layout/fragment_feed_list.xml
+++ b/app/src/main/res/layout/fragment_feed_list.xml
@@ -28,7 +28,11 @@
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scrollbars="vertical"
+                    app:fastScrollEnabled="true"
+                    app:fastScrollVerticalThumbDrawable="@drawable/fast_scroller_thumb"
+                    app:fastScrollVerticalTrackDrawable="@drawable/fast_scroller_track"
+                    app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroller_thumb"
+                    app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroller_track"
                     />
 
             </android.support.v4.widget.SwipeRefreshLayout>
