Migrate to androidx
Koinのバージョンも上げた（androidxに対応するために必要だった）
androidxへのmigrationにあたりテストコードの修正なども含まれている

--- a/app/src/main/res/layout/dialog_comment_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_comment_bottom_sheet.xml
@@ -29,7 +29,7 @@
             app:elevation="4dp"
             />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
