--- a/app/src/main/res/layout/fragment_filter_detail.xml
+++ b/app/src/main/res/layout/fragment_filter_detail.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/filter_delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/delete"
+                    android:text="@string/unset_filter"
                     android:clickable="true"
                     android:focusable="true"
                     android:background="?attr/selectableItemBackground"
