--- a/app/src/main/res/layout/item_entry_bookmarks.xml
+++ b/app/src/main/res/layout/item_entry_bookmarks.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="bookmark"
-            type="jp.gcreate.product.filteredhatebu.model.HatebuBookmark"
+            type="jp.gcreate.product.filteredhatebu.api.response.HatebuBookmark"
             />
     </data>
 
