--- a/app/src/main/res/layout/view_comment_status.xml
+++ b/app/src/main/res/layout/view_comment_status.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="status"
-            type="jp.gcreate.product.filteredhatebu.model.HatebuComments"
+            type="jp.gcreate.product.filteredhatebu.api.response.HatebuComments"
             />
     </data>
 
@@ -26,13 +26,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_comment"
-            android:tint="@color/colorAccent"
             style="@style/Base.Widget.AppCompat.ActionButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/status_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
+            app:tint="@color/colorAccent"
             />
 
         <TextView
